# corpus-prep

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  PRD.md  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: git-guard.sh
.claude/skills/: commit-style.md
docs/: refinedweb-summary.md
notebooks/: dedup_walkthrough.ipynb  duckdb_exploration.ipynb  format_coverage.ipynb  ftfy_walkthrough.ipynb  q6_dedup_walkthrough.ipynb
scripts/: audit_corpus.py  benchmark.py  download_glotlid.sh  fetch_sample_corpus.sh
src/corpus_prep/: __init__.py  cli.py  dedup.py  detect.py  filter.py  normalize.py  pipeline.py  schemas.py  shard.py
src/corpus_prep/parsers/: __init__.py  base.py  docling_parser.py  html_parser.py  pdf_native.py  registry.py  textlike.py
src/corpus_prep/utils/: ids.py  io.py
tests/: conftest.py  test_cli.py  test_dedup.py  test_detect.py  test_filter.py  test_normalize.py  test_parsers_docling.py  test_parsers_html.py  test_parsers_pdf_native.py  test_parsers_textlike.py  test_pipeline_e2e.py  test_registry.py  test_schemas.py  test_shard.py
